changed overflow to hidden to fix scrollbar issue.

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,7 +45,7 @@ a {
 
 .main {
   background: rgba(0, 0, 0, .5);
-  border: 0px solid blue;
+  border: 1px solid blue;
   border-radius: 8px;
   color: white;
   align-content: center;
@@ -84,7 +84,7 @@ a {
 
 .header {
   background-color: transparent;
-  border: 0px solid yellow;
+  border: 1px solid yellow;
   // height: 50px;
   position: relative;
   z-index: 2
@@ -96,13 +96,13 @@ a {
   height: 100%
 }
 
-.btn-style {
+button {
   color: black;
   margin: 3px;
 }
 
 .btn-group{
-  border: 0px solid green;
+  border: 1px solid green;
   left: 60%;
 }
 
